--- a/style_si.css
+++ b/style_si.css
@@ -98,7 +98,7 @@ p {
     left: 5%;
     width: 80px;
     height: 80px;
-    background: url('https://i.imgur.com/NjotN8U.png') no-repeat center;
+    background: url('https://png.pngtree.com/png-clipart/20210211/ourmid/pngtree-sparks-background-png-image_2910652.jpg') no-repeat center;
     background-size: contain;
     animation: sparkle 1.5s infinite alternate ease-in-out;
     opacity: 0.6;
